--- a/app/src/main/res/layout/reset_password_page.xml
+++ b/app/src/main/res/layout/reset_password_page.xml
@@ -7,54 +7,54 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <!-- Image View for icon -->
+
     <!-- New Password EditText -->
-
-    <!-- Confirm Password EditText -->
-
-    <!-- Reset Password Button -->
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="145dp"
         android:layout_height="130dp"
         android:layout_marginStart="116dp"
         android:layout_marginTop="96dp"
+        android:src="@drawable/mood_48px"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/mood_48px"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/new_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:hint="New Password"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/imageView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        android:layout_marginTop="32dp" />
 
+    <!-- Confirm Password EditText -->
     <EditText
         android:id="@+id/confirm_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:hint="Confirm Password"
         android:inputType="textPassword"
-        app:layout_constraintMarginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/new_password" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/new_password"
+        android:layout_marginTop="16dp" />
 
+    <!-- Reset Password Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_reset"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="Reset Password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirm_password" />
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirm_password"
+        android:layout_marginTop="24dp"
+        app:cornerRadius="8dp"
+        app:strokeColor="@color/blue_violet"
+        app:strokeWidth="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
