--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -57,6 +57,7 @@
                     android:textSize="16sp" />
 
                 <GridLayout
+                    android:id="@+id/passwords"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
@@ -71,6 +72,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/cards"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
                             android:contentDescription="Credit/debit cards"
@@ -96,6 +98,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/memberships"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
                             android:contentDescription="Memberships"
@@ -121,6 +124,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/vouchers"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
                             android:contentDescription="Vouchers"
@@ -147,6 +151,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/password"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
                             android:contentDescription="Pass"
@@ -173,6 +178,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/personal_ids"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
                             android:contentDescription="Personal id"
@@ -199,6 +205,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/other"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
                             android:contentDescription="Other"
