--- a/app/src/main/res/layout/creditcardmanager.xml
+++ b/app/src/main/res/layout/creditcardmanager.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".CreditcardActivity">
+    tools:context=".CreditCardActivity">
 
+    <!-- Add Card Button -->
     <Button
         android:id="@+id/btn_add_card"
         android:layout_width="64dp"
@@ -18,16 +19,21 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="16dp" />
 
+    <!-- RecyclerView for Credit Cards -->
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_cards"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_add_card"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="369dp"
+        android:layout_height="458dp"
+        android:clipToPadding="false"
         android:padding="16dp"
-        android:clipToPadding="false" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_add_card"
+        app:layout_constraintVertical_bias="0.285" />
 
     <ImageView
         android:id="@+id/img_fingerprint"
