--- a/app/src/main/res/layout/forgot_page.xml
+++ b/app/src/main/res/layout/forgot_page.xml
@@ -33,6 +33,7 @@
                 android:layout_marginTop="112dp"
                 android:contentDescription="@string/app_logo"
                 android:src="@drawable/ic_heart_logo"
+                app:tint="@color/purple_200"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/back_to_login"
+                android:textSize="17dp"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                 android:textColor="?attr/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
