--- a/app/src/main/res/layout/reset_password_page.xml
+++ b/app/src/main/res/layout/reset_password_page.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="116dp"
         android:layout_marginTop="96dp"
         android:src="@drawable/mood_48px"
+        app:tint="@color/purple_200"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
