--- a/app/src/main/res/layout/signup_page.xml
+++ b/app/src/main/res/layout/signup_page.xml
@@ -28,14 +28,15 @@
 
             <ImageView
                 android:id="@+id/logo"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="141dp"
+                android:layout_height="134dp"
                 android:layout_marginTop="88dp"
                 android:src="@drawable/account_circle_48px"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/purple_200" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/email_layout"
@@ -52,6 +53,7 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:hint="Email"
                     android:inputType="textEmailAddress" />
 
@@ -113,12 +115,15 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/already_have_account"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="225dp"
+                android:layout_height="64dp"
                 android:layout_marginTop="16dp"
-                android:text="Already have an account? Login"
+                android:padding="3dp"
+                android:text="Already have an account?"
                 android:textColor="?android:attr/textColorSecondary"
+                android:textSize="17dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.59"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_signup" />
 
