--- a/app/src/main/res/layout/membershipmanager.xml
+++ b/app/src/main/res/layout/membershipmanager.xml
@@ -19,22 +19,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.8"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"/>
 
-
+    <!-- RecyclerView for Credit Cards -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_cards"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:clipToPadding="false"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_add_card"
-        app:layout_constraintVertical_bias="0.066"
-        app:layout_constraintWidth_percent="1"
-        app:layout_constraintHeight_percent="0.7" />
+    android:clipToPadding="false"
+    android:padding="16dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/btn_add_card"
+    app:layout_constraintVertical_bias="0.066"
+    app:layout_constraintWidth_percent="1"
+    app:layout_constraintHeight_percent="0.7" /> <!-- 70% of parent height -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
